# green-travel

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
dags/: green_travel_pipeline.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: dim_country.sql  fct_co2_emissions.sql  fct_country_ranking.sql  fct_emissions_trend.sql  marts.yml
dbt/models/staging/: sources.yml  stg_owid__co2.sql  stg_owid__co2.yml
